# jobagent

./: .cursorignore  .dockerignore  .env.example  .env.fly.example  .flyignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SMS_MIGRATION_SUMMARY.md  TESTING.md  alembic.ini  deploy.sh  design_doc.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  fly.toml  fly.toml.bak  main.py  migrate.sh  pyproject.toml  release-tasks.sh  update_secrets.sh
.cursor/rules/: AGENTS.md  guide.mdc
alembic/: env.py
alembic/versions/: 3514ab865879_updated_profile.py  8105b668d478_add_queue_task_id_approval_context_.py  925341dafe91_initial_database_schema.py  96170a291ce2_add_location_requirements_and_salary_to_.py
app/: api_server.py  automation.py  db.py  models.py  notifications.py  pdf_utils.py  queue_manager.py  security.py  storage.py  tasks.py  tools.py
app/api/: __init__.py  applications.py  files.py  health.py  jobs.py  profile.py  shared.py  system.py  testing.py  webhooks.py
app/tasks/: __init__.py  documents.py  processing.py  queue_consumer.py  ranking.py  reporting.py  shared.py  submission.py
app/tools/: __init__.py  company.py  documents.py  example_resume.md  ingestion.py  pdf_utils.py  preferences.py  ranking.py  reporting.py  storage.py  submission.py  utils.py
dev_log/: PROFILE_API_SPEC.md  STAGEHAND_IMPLEMENTATION_SUMMARY.md
node-scraper/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
node-scraper/src/: application-processor.test.ts  application-processor.ts  intelligent-question-handler.test.ts  intelligent-question-handler.ts  queue-consumer.ts  stagehand-wrapper.test.ts  stagehand-wrapper.ts
node-scraper/src/test/: integration.test.ts  setup.ts  vitest-globals.d.ts
node-scraper/src/types/: stagehand.ts  tasks.test.ts  tasks.ts
node-scraper/src/utils/: logger.ts  redis.test.ts  redis.ts
tests/: conftest.py
tests/e2e/: __init__.py  test_api.py
tests/unit/: __init__.py  test_models.py  test_security.py  test_tools.py
